# raytracer

./: CMakeLists.txt  LICENSE  README  README.md  generate_images.sh  random_scenes.sh
scenes/: air_in_glass.scn  bubbles1.scn  concrete.scn  crazy.scn  glass_in_light_glass.scn  impossible.scn  infinite_mirrors1.scn  infinite_mirrors2.scn  interesting1.scn  interesting10.scn  interesting11.scn  interesting2.scn  interesting3.scn  interesting4.scn  interesting5.scn  interesting6.scn  interesting7.scn  interesting8.scn  interesting9.scn  mirror.scn  mirror_in_glass.scn  multicolor.scn  pellicule.scn  random1.scn  transparent_sphere.scn
src/: Makefile  material.hpp  messages.hpp  ray.hpp  raytracer.cpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  utils.hpp  vector.cpp  vector.hpp
